added missing env var

--- a/cloud-run/application/cloudbuild.yaml
+++ b/cloud-run/application/cloudbuild.yaml
@@ -40,6 +40,8 @@ steps:
   - "--env"
   - "PYTHONPATH=/home"
   - "--env"
+  - "PROJECT_ID=${PROJECT_ID}"
+  - "--env"
   - "K_REVISION=cloudbuild"
   - "--entrypoint"
   - "bash"
