--- a/gke/cloudbuild.yaml
+++ b/gke/cloudbuild.yaml
@@ -92,3 +92,5 @@ steps:
         echo "*******************************************************************************"
       fi
 # [END tf-apply]      
+options:
+  logging: CLOUD_LOGGING_ONLY
